Update CMake build configuration.
  * Add 'CMakeUseLocalModules' for expansion of module discovery.
  * Add 'CMakeProvideUninstallTarget' to define an uninstallation target.
  * Add 'UseWintermute' to provide the necessary information for building
    Wintermute and Wintermute-related projects.
  * Add 'WintermuteDependencies' to define the requirements of building
    Wintermute.
  * Add 'WintermuteVariables' to provide variables necessary for Wintermute.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,9 @@ cmake_minimum_required(VERSION 2.8)
 project(Wintermute)
 
 ## Include our modules in the discovery of modules.
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules")
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules")
+include(CMakeUseLocalModules)
+include(CMakeProvideUninstallTarget)
 
 ## Define some project-specific variables.
 set(VERSION_MAJOR "0")
@@ -30,7 +32,6 @@ set(VERSION_PATCH "1")
 
 ## Include sub-directories.
 add_subdirectory(cmake)
-add_subdirectory(lib)
 add_subdirectory(src)
 add_subdirectory(test)
 add_subdirectory(doc)
