Add source files for Wintermute.
  * Introduce new layout for headers.
  * Build out bare bones of Wintermute::Application.
  * Begin work on global definition header.

- #gklist And it begins!

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,36 @@
 ### along with Wintermute.  If not, see <http://www.gnu.org/licenses/>.
 ###############################################################################
 
-include(WintermuteVariables)
-include(WintermuteDependencies)
-include(CMakeProvideUninstallTarget)
+# Include necessary components.
+include(UseWintermute)
+
+set(WINTERMUTE_BUILD_INCLUDE_DIRS ${WINTERMUTE_INCLUDE_DIRS}
+  ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
+list(REMOVE_ITEM WINTERMUTE_BUILD_INCLUDE_DIRS ${WINTERMUTE_INCLUDE_DIR})
+
+# Grab the sources!
+set(WINTERMUTE_SOURCES
+  main.cpp
+  Wintermute/application.cpp
+  )
+set(WINTERMUTE_HEADERS global.hpp)
+
+# Wrap up the sources.
+qt4_automoc(${WINTERMUTE_SOURCES})
+
+# Define the executable.
+add_executable(wintermute ${WINTERMUTE_SOURCES})
+
+# Define properties for Wintermute's executable.
+set_target_properties(wintermute PROPERTIES
+  COMPILE_DEFINITIONS ${WINTERMUTE_COMPILE_DEFINITIONS}
+  COMPILE_DEFINITIONS_DEBUG ${WINTERMUTE_COMPILE_DEFINITIONS_DEBUG}
+  COMPILE_FLAGS ${WINTERMUTE_COMPILE_FLAGS}
+  FOLDER "Wintermute/Core"
+  PROJECT_LABEL "Wintermute")
+
+include_directories(${WINTERMUTE_BUILD_INCLUDE_DIRS})
+target_link_libraries(wintermute ${WINTERMUTE_LIBRARIES})
+
+# Generate the global definition file.
+configure_file(globals.hpp.in Wintermute/globals.hpp @ONLY)
