Add CMake modules to top-level CMakeLists.txt file.
  * Introduced testing modules to top level part of the build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,8 @@ project(Wintermute)
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules")
 include(CMakeUseLocalModules)
 include(CMakeProvideUninstallTarget)
+include(WintermuteMacros)
+include(WintermuteTesting)
 
 ## Define some project-specific variables.
 set(VERSION_MAJOR "0")
