Port changes of afc84ca to 'globals.hpp.in'

--- a/src/globals.hpp.in
+++ b/src/globals.hpp.in
@@ -30,8 +30,8 @@
 
 /// {{{ Constants
 
-#define WINTERMUTE_VERSION                @WINTERMUTE_MAJOR_VERSION.@WINTERMUTE_MINOR_VERSION
-#define WINTERMUTE_VERSION_EXACT          "@WINTERMUTE_MAJOR_VERSION.@WINTERMUTE_MINOR_VERSION-@WINTERMUTE_PATCH_VERSION"
+#define WINTERMUTE_VERSION                @WINTERMUTE_VERSION_MAJOR@.@WINTERMUTE_VERSION_MINOR@
+#define WINTERMUTE_VERSION_EXACT          "@WINTERMUTE_VERSION_MAJOR@.@WINTERMUTE_VERSION_MINOR@-@WINTERMUTE_VERSION_PATCH@"
 
 /// }}} Constants
 
