Revert "Move test suite and add new unit test."
This reverts commit df9c3ab73153f9b7a0e7d8001a49ed135b6a8097.

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -17,13 +17,15 @@
 ### along with Wintermute.  If not, see <http://www.gnu.org/licenses/>.
 ###############################################################################
 
+include(WintermuteVariables)
+
 include_directories(${WINTERMUTE_INCLUDE_DIRS}
   ${QT_QTTEST_INCLUDE_DIR}
+  "${QT_QTTEST_INCLUDE_DIR}/.."
   ${CMAKE_CURRENT_BINARY_DIR})
 
 set (WINTERMUTE_TEST_UNITS
-      clean_start
-      command_line)
+      clean_start)
 
 foreach(WINTERMUTE_TEST_UNIT ${WINTERMUTE_TEST_UNITS})
   wintermute_add_unit_test(${WINTERMUTE_TEST_UNIT} "${CMAKE_CURRENT_SOURCE_DIR}/${WINTERMUTE_TEST_UNIT}.cpp")
