--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -17,16 +17,15 @@
 ### along with Wintermute.  If not, see <http://www.gnu.org/licenses/>.
 ###############################################################################
 
-include(WintermuteVariables)
+## Make sure we can automoc the tests.
+include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
-include_directories(${WINTERMUTE_INCLUDE_DIRS}
-  ${QT_QTTEST_INCLUDE_DIR}
-  "${QT_QTTEST_INCLUDE_DIR}/.."
-  ${CMAKE_CURRENT_BINARY_DIR})
-
+## Produce the list of buildable tests.
 set (WINTERMUTE_TEST_UNITS
-      clean_start)
+  clean_start
+  )
 
+## Add each unit test to the test suite.
 foreach(WINTERMUTE_TEST_UNIT ${WINTERMUTE_TEST_UNITS})
   wintermute_add_unit_test(${WINTERMUTE_TEST_UNIT} "${CMAKE_CURRENT_SOURCE_DIR}/${WINTERMUTE_TEST_UNIT}.cpp")
 endforeach(WINTERMUTE_TEST_UNIT ${WINTERMUTE_TEST_UNITS})
