--- a/test/include/Wintermute/testing.hpp.in
+++ b/test/include/Wintermute/testing.hpp.in
@@ -16,6 +16,26 @@
  *
  * You should have received a copy of the GNU General Public License
  * along with Wintermute.  If not, see <http://www.gnu.org/licenses/>.
-**/
+ **/
 
-#define WINTERMUTE_EXECUTABLE @WINTERMUTE_TEST_EXECUTABLE@
+#include <QCoreApplication>
+#include <QProcess>
+
+/// Define some global defines for the suite.
+#define WINTERMUTE_EXECUTABLE "@WINTERMUTE_TEST_EXECUTABLE@"
+
+// TODO: Define a suite of classes to be used for inheritance.
+// TODO: Implement Wintermute::Testing::Test, providing the basis of testing.
+// TODO: Implement Wintermute::Testing::UnitTest.
+// TODO: Implement Wintermute::Testing::FeatureTest.
+// TODO: Implement Wintermute::Testing::RegressionTest.
+namespace Wintermute {
+  namespace Testing {
+    QProcess*
+    spawnProcess(const QStringList& arguments){
+      QProcess* process = new QProcess(qApp);
+      process->start(WINTERMUTE_EXECUTABLE,arguments);
+      return process;
+    }
+  }
+}
