Updated CMake configuration and add 'Version'.
  * Implement semantic versioning class for portability.
  * Added 'version.cpp' to build.
  * Correct 'globals.hpp' source installation path.
  * Added 'Version' to source and to pretty install.
  * Added 'version.hpp' to source and to pretty install.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,6 +27,7 @@ set(WINTERMUTE_SOURCES
   Wintermute/arguments.cpp
   Wintermute/logging.cpp
   Wintermute/plugin.cpp
+  Wintermute/version.cpp
   main.cpp
   )
 
@@ -37,13 +38,15 @@ set(WINTERMUTE_HEADERS
   Wintermute/Globals
   Wintermute/Logging
   Wintermute/Plugin
+  Wintermute/Version
 
   ### Native headers
   Wintermute/application.hpp
   Wintermute/arguments.hpp
   Wintermute/logging.hpp
-  "${CMAKE_CURRENT_BINARY_DIR}/Wintermute/globals.hpp"
   Wintermute/plugin.hpp
+  Wintermute/version.hpp
+  "${CMAKE_CURRENT_BINARY_DIR}/globals.hpp"
   )
 
 # Wrap up the sources.
