--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,13 @@
 language: cpp
-
- compiler: gcc
-
+ compiler: clang
  before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq cmake sqlite3 qt4-dev-tools
+  - sudo apt-get install -qq cmake qt4-dev-tools libqt4-dev
 
  before_script:
    - mkdir build
    - cd build
-   - cmake ..
+   - cmake .. -DCMAKE_BUILD_TYPE=Debug
 
  script: make
 
