Define default path for extension loading.
  * Added path for the plug-in definition directory.
  * Added path for the plug-in library directory.
  * Added path for the generic plug-in directory.

--- a/src/globals.hpp.in
+++ b/src/globals.hpp.in
@@ -42,6 +42,10 @@
 #define WINTERMUTE_VERSION_STAGE              @WINTERMUTE_VERSION_STAGE@
 #define WINTERMUTE_VERSION_STAGE_BRANCH       "@WINTERMUTE_VERSION_STAGE_BRANCH@"
 #define WINTERMUTE_VERSION_STAGE_REVISION     "@WINTERMUTE_VERSION_STAGE_REVISION@"
+#define WINTERMUTE_PLUGIN_LIBRARY_DIR         "@WINTERMUTE_PLUGIN_LIBRARY_DIR@"
+#define WINTERMUTE_LIBRARY_DIR                "@WINTERMUTE_PLUGIN_LIBRARY_DIR@"
+#define WINTERMUTE_DEFINITION_DIR             "@WINTERMUTE_PLUGIN_DEFINITION_DIR@"
+
 
 /// }}} Constants
 
