Updated changes for CMake for extensibility.

--- a/cmake/Modules/FindWintermute.cmake.in
+++ b/cmake/Modules/FindWintermute.cmake.in
@@ -32,3 +32,5 @@ include(WintermuteVariables)
 include(WintermuteDependencies)
 include(WintermuteMacros)
 include(WintermuteVersioning)
+
+set(WINTERMUTE_FOUND ON)
