--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ branches:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq cmake qt4-dev-tools libqt4-dev
+  - test/build_deps.sh
 
 before_script:
   - mkdir build
