Added two more non-existing source files to build.
  * Added 'factory.cpp' to the build.
  * Added 'temporaryplugin.cpp' to the build.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,6 +27,8 @@ set(WINTERMUTE_SOURCES
   Wintermute/arguments.cpp
   Wintermute/logging.cpp
   Wintermute/plugin.cpp
+  Wintermute/factory.cpp
+  Wintermute/temporaryplugin.cpp
   Wintermute/version.cpp
   main.cpp
   )
