Added Wintermute::Configuration to the build.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,6 +26,7 @@ set(WINTERMUTE_SOURCES
   Wintermute/application.cpp
   Wintermute/arguments.cpp
   Wintermute/logging.cpp
+  Wintermute/configuration.cpp
   Wintermute/plugin.cpp
   Wintermute/factory.cpp
   Wintermute/temporaryplugin.cpp
@@ -37,6 +38,7 @@ set(WINTERMUTE_HEADERS
   ### Pretty headers
   Wintermute/Application
   Wintermute/Arguments
+  Wintermute/Configuration
   Wintermute/Globals
   Wintermute/Logging
   Wintermute/Plugin
@@ -48,6 +50,7 @@ set(WINTERMUTE_HEADERS
   Wintermute/logging.hpp
   Wintermute/plugin.hpp
   Wintermute/version.hpp
+  Wintermute/configuration.hpp
   "${CMAKE_CURRENT_BINARY_DIR}/globals.hpp"
   )
 
